<resources>
    <string name="app_name">CS198</string>

    <string name="thesis_it">THESIS IT CS198!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="camButton">Camera</string>
    <string name="galButton">Gallery</string>
    <string name="hello_world">Yow!</string>
    <string name="album_name">CS198Photos</string>
    <string name="title_activity_face_detect">FaceDetect</string>
    <string name="numFaceDetected">Number of faces detected:</string>
    <string name="faceDetectHaarButton">Haar\nDetect</string>
    <string name="faceDetectLBPButton">LBP\nDetect</string>
    <string name="faceDetectAndroidButton">Android\nDetect</string>
    <string name="timeElapsed">Time in seconds:</string>
    <string name="detectType">Detection Method: </string>
    <string name="haar20Detect">Haar\n20</string>
    <string name="title_activity_java_cvtrain_face_recognizer_test">OpenCVFaceRecognizer</string>
    <string name="train">Train</string>
    <string name="eigen">Eigen</string>
    <string name="fisher">Fisher</string>
    <string name="lbph">LBPH</string>
    <string name="title_activity_open_cvtrain_face_recognizer">OpenCVTrainFaceRecognizer</string>
    <string name="trainn">Train:</string>
    <string name="eigenface">Eigenface</string>
    <string name="fisherface">Fisherface</string>
    <string name="trainAlgorithms">Train Algorithm</string>
    <string name="title_activity_java_cvface_recognizer_test">JavaCVFaceRecognizerTest</string>

    <string name="UploadMaster">
        The Masterlist file contains student information written in this format: <b>Student Number,Last name,First name</b>\n\n
        1. Copy the masterlist file into the android smartphone. \n\n
        2. Upon opening the application, tap on the context menu above the title bar and select <b>Upload Master List</b>.\n\n
        3. A dialog activity will open showing the contents of the Android smartphone\'s storage. Select the master list file with the aforementioned format.
    </string>

    <string name="EditMaster">
        1. Tap on the home screen\'s context menu and select <b>Add Student to Master List</b>.\n\n
        2. Fill out the details of the student on the pop-up dialog then press <b>Add New Student</b>.\n\n
        3. If the details were filled out correctly, the new student will be appended into the end of the masterlist.
    </string>

    <string name="AddClass">
        1. Tap on the <b>Add Class</b> button.\n\n
        2. Input the class name, start time and end time and select the students that belong to the class.\n\n
        3. After putting the necessary information, tap on the <b>Save</b> button located at the upper right corner.
    </string>

    <string name="EditClass">
        1. Select the class that you wanted to edit.\n\n
        2. Tap on the context menu above, and select <b>Edit Students</b>.\n\n
        3. On the edit class activity, check or uncheck the students that need to be added or removed from the class.\n\n
        4. Tap on the <b>Save</b> button to save the changes made.
    </string>

    <string name="GetTrainingCrops">
        1. On the application home screen, tap on the <b>Train</b> button below.\n\n
        2. Tap on the Camera button.\n\n
        3. You can either capture photos of the class using the camera or select class images from the phone\'s gallery.\n\n
        4. Upon capture or selection, the application will process the images and generate detected face crops ready for labelling.\n\n
        5. If you are satisfied with the pictures processed, tap the back button to go back to the train activity.
    </string>

    <string name="LabelCrops">
        1. On the train activity, the detected face crops are already shown.\n\n
        2. Tap on each face crop to label it accordingly whether it is a student name, non-face or to be deleted.\n\n
        3. Repeat Step 2 until all the crops have been labelled. The user can opt to stop labelling and continue the process afterwards.\n\n
        4. Once all the detected crops were labelled accordingly, press the <b>Train</b> button to initiate the training process. This takes an average of 5-10 minutes depending on the quantity of the labelled crops.\n\n
        5. After the training process, the detected crops are moved to the trained crops folder which can be viewed by tapping the <b>Person icon</b> on the upper right corner.
    </string>

    <string name="TakeClassAttendance">
        1. Tap on the <b>Take Picture</b> button of the class item that needs attendance checking to launch the app\'s camera activity.\n\n
        2. You can either capture photos of the class using the camera or select class images from the phone\'s gallery.\n\n
        3. Upon capture or selection, the application will process the images and will generate the attendance report for the certain class day. There will be an indicator of the number of students recognized by the application while processing.\n\n
        4. Press the home screen to go back to the class list to view the generated report.
    </string>


    <string name="ViewReport">
        1. Select the class you want to view its attendance report.\n\n
        2. Tap on the <b>View Attendance Report</b> button located at the top.\n\n
        3. Select the class date you want to view the report. The following options can be done when viewing an attendance report:\n
            \ta. You can also view the recognized face crops of a certain student captured on that day by simply tapping on a student item.\n
            \tb. Non face crops can ve viewed by tapping on the <b>View Non Faces</b> button at the bottom of the screen.\n
            \tc. You can also add the recognized crops to the training activity by tapping on the <b>Add to Train</b> button on the upper right corner for retraining the recognizer.
    </string>


    <string name="EditReport">
        1. Select the attendance report you want to review.\n\n
        2. Simply tap on the student item who has been incorrectly marked by application to correct it.
    </string>









</resources>
