<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context="com.example.dale.cs198.FaceDetect">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="375dp"
        android:id="@+id/detected"
        android:visibility="visible"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF"
        android:text="@string/numFaceDetected"
        android:id="@+id/numFaceDetected"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/timeElapsed"
        android:layout_alignLeft="@+id/detected" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF"
        android:text="@string/timeElapsed"
        android:id="@+id/timeElapsed"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/detectType"
        android:layout_alignLeft="@+id/detected" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF"
        android:text="@string/detectType"
        android:id="@+id/detectType"
        android:layout_below="@+id/detected"
        android:layout_alignLeft="@+id/detected"
        android:layout_alignStart="@+id/detected"
        android:layout_marginTop="43dp" />


</RelativeLayout>
